<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/absencesDefValue"
        android:capitalize="words"
        android:inputType="textCapSentences"
        android:key="mungesaKey"
        android:maxLines="4"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_display_absence" />

    <EditTextPreference
        android:defaultValue="@string/parentsGatheringDefValue"
        android:capitalize="words"
        android:inputType="textCapSentences"
        android:key="parentsKey"
        android:maxLines="4"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_display_parents" />


</PreferenceScreen>
