<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.harryfultz.studentmanager.activities.ShtoStudent"
    tools:showIn="@layout/shto_student_activity">

    <RelativeLayout
        android:id="@+id/content_shto_student"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/mainTextId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/addStudentMainText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainTextId"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/light_black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/celi"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/light_black"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:checked="false"
                android:text="@string/radio_male"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                android:text="@string/radio_female"
                android:textColor="@color/white" />

        </RadioGroup>


        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioSex"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:onClick="addStudent"
            android:text="@string/shto"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/addAnotherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addButton"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:onClick="addAnotherStudent"
            android:text="@string/addAnother"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
