<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.harryfultz.studentmanager.activities.MainPage">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="54dp"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white">

                <LinearLayout
                    android:id="@+id/mungesatButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/absences" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/absenceMessageCard"
                        android:textAlignment="center" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white">

                <LinearLayout
                    android:id="@+id/mbledhjeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/family" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/gatheringMessageCard"
                        android:textAlignment="center" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white">

                <LinearLayout
                    android:id="@+id/specialComplainButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/complain" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/specialComplainMessageCard"
                        android:textAlignment="center" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
